# ccna-platform

./: .gitignore  README.md
apps/web/: .env.example  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/assets/[id]/: route.ts
apps/web/components/: ContentBlocks.tsx  Quiz.tsx
apps/web/content/bundle/: manifest.json  questions.jsonl  report.json
apps/web/lib/: bundle.ts  grade.ts  types.ts
apps/web/prisma/: schema.prisma
content/: sample-networking.json
docs/: authoring-format.md  import-engine.md
importer/: pyproject.toml
importer/src/qbank_importer/: __init__.py  cli.py  errors.py
importer/src/qbank_importer/bundle/: __init__.py  reader.py  writer.py
importer/src/qbank_importer/model/: __init__.py  content.py  manifest.py  question.py  report.py  traverse.py
importer/src/qbank_importer/pipeline/: __init__.py  normalize.py  preview.py  runner.py
importer/src/qbank_importer/sources/: __init__.py  base.py
importer/src/qbank_importer/sources/json/: __init__.py  reader.py
importer/src/qbank_importer/sources/pdf/: __init__.py  assemble.py  blocks.py  classify.py  config.py  layout.py  segment.py
importer/src/qbank_importer/validation/: __init__.py  base.py  engine.py
importer/src/qbank_importer/validation/rules/: __init__.py  answer_keys.py  basics.py  references.py
importer/tests/: test_bundle_roundtrip.py  test_json_source.py  test_normalizer.py  test_pdf_source.py  test_question_models.py  test_validation.py
